<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">aAurela</string>
    <dimen name="margin_6dp">6dp</dimen>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="favourites_title">Favourites</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_signin">Sign in</string>
    <string name="server_address">server address</string>
    <string name="server_port">port number</string>
    <string name="last_measurement">Last measurement</string>
    <string name="menu_synchronize_all">Synchronize all data</string>
    <string name="menu_log_out">Log out</string>
    <string name="data_synchronized">Data successfully synchronized</string>
    <string name="dialog_error_title">Error!</string>
    <string name="dialog_error_message">Something went wrong please restart the app.</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_message_signing">Signing in…</string>
    <string name="wrong_user_or_pass">Wrong username or password</string>
    <string name="dialog_no_network_title">Network error!</string>
    <string name="dialog_no_network_login_message">It seems there is no network connection</string>
    <string name="dialog_no_network_message">To synchronize latest data, check your network connection. Press Cancel to load latest stored data.</string>
    <string name="dialog_button_restart">Restart</string>
    <string name="dialog_invalid_server_or_port">The selected server or port is invalid, try again.</string>
    <string name="dialog_no_network_server_auth">To verify selected server and port check your internet connection.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="no_measurement_date">No measurements (%1$d) day/s</string>
    <string name="max_alarm">Max alarm: </string>
    <string name="sensor">Sensor: </string>
    <string name="min_alarm">Min alarm:</string>

    <string name="last_measurement_date">Last measurement date:</string>
    <string name="measured_maximum">Maximum</string>
    <string name="measured_minimum">Minimum</string>
    <string name="measured_average">Average</string>
    <string name="graph_view_title">Overview</string>
    <string name="graph_period_info_single">(last %1$d day)</string>
    <string name="graph_period_info_many1">(last %1$d days)</string>
    <string name="graph_period_info_many2">(last %1$d days)</string>
    <string name="menu_choose_period">Shown interval</string>
    <string name="dialog_message_server_synchronization">Synchronizing data…</string>


    <string name="dialog_period_change_title">Change period</string>
    <string name="dialog_period_change_message_graph_view">Select period in days, for displaying data for graph.</string>
    <string name="dialog_period_change_message">Select period in days, for displaying data.</string>
    <string name="fill_all_fields_snackbar">You must fill all fields</string>
    <string name="value_placeholder">%1$.1f %2$s</string>
    <string name="login_server_name"><u>%1$s</u></string>
    <string name="snackbar_signed">%1$s signed in</string>
    <string name="dialog_server_error_message">Server is currently not available, press Cancel to load latest stored data.</string>
    <string name="server_not_available">Server is currently not available.</string>
    <string name="no_favourites">No favourites</string>
    <string name="area_title">Area: %1$s</string>
    <string name="sector_title">Sector: %1$s</string>
    <string name="menu_about">About app</string>
    <string name="app_version">Version %1$s</string>
    <string name="contact_us"><u>Contact us</u></string>
    <string name="mail"><u>matustabasco@gmail.com</u></string>
    <string name="about_info_signed_as">Signed user %1$s</string>
    <string name="chooser_title">Choose the application</string>
    <string name="mail_subject">aAurela application</string>
    <string name="mail_body">Hello, I am using aAurela…</string>
    <string name="about_title">aAurela (Sensorical System)</string>
    <string name="graph_no_data">There are no data for selected period</string>
    <string name="not_available">N/A</string>
    <!--<string name="average_text">Average (%1$d day/s)</string>-->
    <string name="average_text_single">Average (%1$d day)</string>
    <string name="average_text_many1">Average (%1$d days)</string>
    <string name="average_text_many2">Average (%1$d days)</string>
    <string name="no_measurement_single">No measurements (%1$d) day</string>
    <string name="no_measurement_many1">No measurements (%1$d) days</string>
    <string name="no_measurement_many2">No measurements (%1$d) days</string>
    <string name="remember_me">Remember me</string>
    <string name="measurements_count">Number of measurements: %1$d</string>
    <string name="last">Last</string>
    <!--<string name="trend_lower">Last hour -%1$.1f</string>-->
    <string name="trend_greater">Diff (1h) %1$.1f</string>
    <string name="trend_tooltip">Last hour trend</string>
</resources>