<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_dashboard"
        android:icon="@drawable/ic_home"
        android:title="Home"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_period"
        android:title="@string/menu_choose_period" />

    <item
        android:id="@+id/menu_synchronize_all_data"
        android:title="@string/menu_synchronize_all" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_log_out"/>

    <item
        android:id="@+id/menu_search"
        android:title="Search"
        android:visible="false"
        app:showAsAction="never|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>