<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/text_view_dialog_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:gravity="start"
        android:padding="6dp"
        android:text="@string/dialog_period_change_title"
        android:textSize="22sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text_view_dialog_period"
        android:background="@color/colorPrimary" />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_dialog_period_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/text_view_dialog_period_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_margin="6dp"
        android:gravity="fill_horizontal"
        android:padding="6dp"
        android:text="@string/dialog_period_change_message_graph_view"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_date_picker"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/number_picker"
        android:background="@drawable/button_rounded_dialog"
        android:text="@string/button_confirm"
        android:textColor="@color/white_no_flash" />


</RelativeLayout>